Trying out an index page

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,10 +19,10 @@
         <a href="{{ site.github.owner_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /> </a>
         {% endif %}
 
-        <p align="center"><a href="./index">Home</a></p>
-        <p align="center"><a href="./labs">Labs</a></p>
-        <p align="center"><a href="./publications">Notes</a></p>
-        <p align="center"><a href="./demos">Demos</a></p>
+        <p align="center"><a href="./README">Home</a></p>
+        <p align="center"><a href="./Labs">Labs</a></p>
+        <p align="center"><a href="./Topics">Lecture Topics</a></p>
+        <p align="center"><a href="./ExamReviews">Exam Reviews</a></p>
         <p align="center"><a href="https://github.com/pattonsgirl/CEG2350/">Source Code & Other Resources</a></p>
 
         <hr>
