--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,7 +19,7 @@
         <a href="{{ site.github.owner_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /> </a>
         {% endif %}
 
-        <p align="center"><a href="./README">Home</a></p>
+        <p align="center"><a href="./index.md">Home</a></p>
         <p align="center"><a href="./Labs">Labs</a></p>
         <p align="center"><a href="./Topics">Lecture Topics</a></p>
         <p align="center"><a href="./ExamReviews">Exam Reviews</a></p>
