ref to dinky theme

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,7 +19,7 @@
         <a href="{{ site.github.owner_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /> </a>
         {% endif %}
 
-        <p align="center"><a href="./index.md">Home</a></p>
+        <p align="center"><a href="./index">Home</a></p>
         <p align="center"><a href="./Labs">Labs</a></p>
         <p align="center"><a href="./Topics">Lecture Topics</a></p>
         <p align="center"><a href="./ExamReviews">Exam Reviews</a></p>
@@ -46,7 +46,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/pages-themes/dinky">Dinky</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
