fixing toc since building with docs only

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,9 +20,9 @@
         {% endif %}
 
         <p align="center"><a href="./index">Course Info / Syllabus</a></p>
-        <p align="center"><a href="./Labs/README.md">Labs</a></p>
-        <p align="center"><a href="./Topics/README.md">Lecture Topics</a></p>
-        <p align="center"><a href="./ExamReviews/README.md">Exam Reviews</a></p>
+        <p align="center"><a href="./Labs">Labs</a></p>
+        <p align="center"><a href="./Topics">Lecture Topics</a></p>
+        <p align="center"><a href="./ExamReviews">Exam Reviews</a></p>
         <p align="center"><a href="https://github.com/pattonsgirl/CEG2350/">Source Code & Other Resources</a></p>
 
         <hr>
