--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,8 +19,8 @@
         <a href="{{ site.github.owner_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" /> </a>
         {% endif %}
 
-        <p align="center"><a href="/index">Course Info / Syllabus</a></p>
-        <p align="center"><a href="/Labs">Labs</a></p>
+        <p align="center"><a href="/CEG2350">Course Info / Syllabus</a></p>
+        <p align="center"><a href="/CEG2350/Labs">Labs</a></p>
         <p align="center"><a href="./Topics">Lecture Topics</a></p>
         <p align="center"><a href="./ExamReviews">Exam Reviews</a></p>
         <p align="center"><a href="https://github.com/pattonsgirl/CEG2350/">Source Code & Other Resources</a></p>
