fixing remaining links

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,8 +21,8 @@
 
         <p align="center"><a href="/CEG2350">Course Info / Syllabus</a></p>
         <p align="center"><a href="/CEG2350/Labs">Labs</a></p>
-        <p align="center"><a href="./Topics">Lecture Topics</a></p>
-        <p align="center"><a href="./ExamReviews">Exam Reviews</a></p>
+        <p align="center"><a href="/CEG2350/Topics">Lecture Topics</a></p>
+        <p align="center"><a href="/CEG2350/ExamReviews">Exam Reviews</a></p>
         <p align="center"><a href="https://github.com/pattonsgirl/CEG2350/">Source Code & Other Resources</a></p>
 
         <hr>
